--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "webpack_template",
-  "version": "1.0.0",
-  "description": "Template para empezar a crear apps desde cero usando el poder de webpack",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Heimer",
-  "license": "ISC"
+	"name": "webpack_template",
+	"version": "1.0.0",
+	"description": "Template para empezar a crear apps desde cero usando el poder de webpack",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack"
+	},
+	"author": "Heimer",
+	"license": "ISC",
+	"devDependencies": {
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0"
+	}
 }
